--- a/system/templates/item/extra-sheet.hbs
+++ b/system/templates/item/extra-sheet.hbs
@@ -10,15 +10,15 @@
 {{> "systems/fatex/templates/item/settings/setting-input.hbs"
     headline = "FAx.Item.Extra.ShortDescription"
     help = "FAx.Item.Extra.ShortDescriptionHelp"
-    fieldName = "data.shortDescription"
-    field = data.shortDescription
+    fieldName = "system.shortDescription"
+    field = system.shortDescription
 }}
 
 {{> "systems/fatex/templates/item/settings/setting-editor.hbs"
     headline = "FAx.Item.Extra.Description"
     help = "FAx.Item.Extra.DescriptionHelp"
-    fieldName = "data.description"
-    field = data.description
+    fieldName = "system.description"
+    field = enrichedDescription
 }}
 
 {{> "systems/fatex/templates/components/item-footer.hbs"}}
