--- a/system/templates/item/settings/setting-editor.hbs
+++ b/system/templates/item/settings/setting-editor.hbs
@@ -5,7 +5,7 @@
 
     <label for="{{ fieldName }}">
         <div class="fatex-setting__editor-wrapper">
-            {{editor content=field target=fieldName button=true owner=owner editable=editable}}
+            {{editor field target=fieldName button=true editable=editable engine="prosemirror"}}
         </div>
         {{#if help}}<span class="fatex-text-input__setting-label">{{localize help}}</span>{{/if}}
     </label>
