Added basic Foundry V12 compatibility.

--- a/system/templates/inline-sheet/character.hbs
+++ b/system/templates/inline-sheet/character.hbs
@@ -6,11 +6,11 @@
             {{#unless isToken}}
                 <input
                     class="fatex-text-input fatex-text-input--headline"
-                    name="data.fatepoints.current"
+                    name="system.fatepoints.current"
                     type="number"
                     min="0"
                     max="99"
-                    value="{{data.fatepoints.current}}"
+                    value="{{system.fatepoints.current}}"
                 >
             {{/unless}}
         </h2>
