--- a/system/templates/item/actorReference-sheet.hbs
+++ b/system/templates/item/actorReference-sheet.hbs
@@ -9,8 +9,8 @@
 
 {{> "systems/fatex/templates/item/settings/setting-input.hbs"
     headline = "FAx.Item.Reference.ID"
-    field = data.id
-    fieldName = "data.id"
+    field = system.id
+    fieldName = "system.id"
 }}
 
 {{> "systems/fatex/templates/components/item-footer.hbs"}}
