--- a/system/templates/item/aspect-sheet.hbs
+++ b/system/templates/item/aspect-sheet.hbs
@@ -2,14 +2,14 @@
 
 {{> "systems/fatex/templates/item/settings/setting-input.hbs"
     headline = "FAx.Item.Aspect.Value"
-    fieldName = "data.value"
-    field = data.value
+    fieldName = "system.value"
+    field = system.value
 }}
 
 {{> "systems/fatex/templates/item/settings/setting-input.hbs"
     headline = "FAx.Item.Aspect.Label"
-    fieldName = "data.label"
-    field = data.label
+    fieldName = "system.label"
+    field = system.label
 }}
 
 {{!--Description is disabled for now--}}
