--- a/system/templates/item/skill-sheet.hbs
+++ b/system/templates/item/skill-sheet.hbs
@@ -9,8 +9,8 @@
 
 {{> "systems/fatex/templates/item/settings/setting-rank.hbs"
     headline = "FAx.Item.Skill.Rank"
-    fieldName = "data.rank"
-    field = data.rank
+    fieldName = "system.rank"
+    field = system.rank
     dtype = "Number"
     radioItems = availableRanks
 }}
@@ -35,8 +35,8 @@
 
 {{> "systems/fatex/templates/item/settings/setting-editor.hbs"
     headline = "FAx.Item.Skill.Description"
-    fieldName = "data.description"
-    field = data.description
+    fieldName = "system.description"
+    field = system.description
 }}
 
 {{> "systems/fatex/templates/components/item-footer.hbs"}}
