--- a/system/templates/item/tokenReference-sheet.hbs
+++ b/system/templates/item/tokenReference-sheet.hbs
@@ -9,14 +9,14 @@
 
 {{> "systems/fatex/templates/item/settings/setting-input.hbs"
     headline = "FAx.Item.Reference.Scene"
-    field = data.scene
-    fieldName = "data.scene"
+    field = system.scene
+    fieldName = "system.scene"
 }}
 
 {{> "systems/fatex/templates/item/settings/setting-input.hbs"
     headline = "FAx.Item.Reference.ID"
-    field = data.id
-    fieldName = "data.id"
+    field = system.id
+    fieldName = "system.id"
 }}
 
 {{> "systems/fatex/templates/components/item-footer.hbs"}}
