--- a/system/templates/components/header.hbs
+++ b/system/templates/components/header.hbs
@@ -20,18 +20,18 @@
         <div class="fatex-header__fate-points-wrapper">
             <input
                 class="fatex-text-input fatex-text-input--fp"
-                name="data.fatepoints.current"
+                name="system.fatepoints.current"
                 type="text"
-                value="{{data.fatepoints.current}}"
+                value="{{actor.system.fatepoints.current}}"
             >
 
             <span class="fatex-header__fatepoint-divider"> / </span>
 
             <input
                 class="fatex-text-input fatex-text-input--fp"
-                name="data.fatepoints.refresh"
+                name="system.fatepoints.refresh"
                 type="text"
-                value="{{data.fatepoints.refresh}}"
+                value="{{actor.system.fatepoints.refresh}}"
             >
         </div>
     </div>
