--- a/system/templates/inline-sheet/character.hbs
+++ b/system/templates/inline-sheet/character.hbs
@@ -10,7 +10,7 @@
                     type="number"
                     min="0"
                     max="99"
-                    value="{{system.fatepoints.current}}"
+                    value="{{actor.system.fatepoints.current}}"
                 >
             {{/unless}}
         </h2>
