Fix issue with aspects and consequences not setting their label

--- a/system/templates/components/aspects.hbs
+++ b/system/templates/components/aspects.hbs
@@ -14,7 +14,10 @@
             <div class="fatex-actions fatex-actions--item">
                 <i class="fatex-js-item-sort fatex-actions__icon fa fa-sort"></i>
                 <i class="fatex-js-aspect-settings fatex-actions__icon fa fa-cog" data-item="{{aspect._id}}"></i>
-                <i class="fatex-js-aspect-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{aspect._id}}"></i>
+                <i
+                    class="fatex-js-aspect-delete fatex-actions__icon fatex-u-delete fa fa-trash"
+                    data-item="{{aspect._id}}"
+                ></i>
             </div>
 
             <label class="fatex-text-input__label">{{aspect.system.label}}</label>
