feat(chat): Add item-to-chat functionality

--- a/system/templates/components/aspects.hbs
+++ b/system/templates/components/aspects.hbs
@@ -13,6 +13,7 @@
 
             <div class="fatex-actions fatex-actions--item">
                 <i class="fatex-js-item-sort fatex-actions__icon fa fa-sort"></i>
+                <i class="fatex-js-item-to-chat fatex-actions__icon fatex-actions__icon--no-hide fa fa-comment" data-item="{{aspect._id}}"></i>
                 <i class="fatex-js-aspect-settings fatex-actions__icon fa fa-cog" data-item="{{aspect._id}}"></i>
                 <i
                     class="fatex-js-aspect-delete fatex-actions__icon fatex-u-delete fa fa-trash"
