fix(headline): update chat headline text color for better visibility

--- a/src/styles/components/headline.scss
+++ b/src/styles/components/headline.scss
@@ -88,6 +88,10 @@
     }
 }
 
+.fatex-headline--chat .fatex-headline__text {
+    color: $light-text-color;
+}
+
 .fatex-section-heading {
     display: block;
     position: relative;
