--- a/system/templates/chat/item-card.hbs
+++ b/system/templates/chat/item-card.hbs
@@ -1,5 +1,5 @@
 <div class="fatex-sheet fatex-item-card">
-    <header class="fatex-headline">
+    <header class="fatex-headline fatex-headline--chat">
         <h3 class="fatex-headline__text">{{item.name}}</h3>
     </header>
     <div class="fatex-item-card__content">
