fix(styles): update cutout mixins to use $fatex-cutout-bg-color for consistency

--- a/src/styles/components/chat.scss
+++ b/src/styles/components/chat.scss
@@ -1,6 +1,9 @@
 .fatex-chat {
     font-size: 24px;
     text-align: center;
+    background: $sheet-background;
+    padding: 5px;
+    border-radius: 3px;
 }
 
 .fatex-chat__headline-container {
