--- a/src/styles/abstract/mixins.scss
+++ b/src/styles/abstract/mixins.scss
@@ -3,7 +3,7 @@
     position: absolute;
     top: -1px;
     left: -1px;
-    border-top: $size solid $fatex-cutout-bg-color;
+    border-top: $size solid $sheet-background;
     border-right: $size solid transparent;
 }
 
@@ -12,7 +12,7 @@
     position: absolute;
     top: -1px;
     right: -1px;
-    border-top: $size solid $fatex-cutout-bg-color;
+    border-top: $size solid $sheet-background;
     border-left: $size solid transparent;
 }
 
@@ -21,7 +21,7 @@
     position: absolute;
     bottom: -1px;
     right: -1px;
-    border-bottom: $size solid $fatex-cutout-bg-color;
+    border-bottom: $size solid $sheet-background;
     border-left: $size solid transparent;
 }
 
