--- a/src/styles/components/chat.scss
+++ b/src/styles/components/chat.scss
@@ -48,7 +48,7 @@ li.chat-message {
     
     .fatex-headline__icon {
         -webkit-text-stroke: 3px black;
-        -webkit-text-fill-color: #ffffff;
+        -webkit-text-fill-color: $light-text-color;
         paint-order: stroke fill;
 
         &--negative {
