--- a/src/styles/components/headline.scss
+++ b/src/styles/components/headline.scss
@@ -45,15 +45,8 @@
     }
 
     &__icon {
-        position: absolute;
-        top: 0;
-        left: 100%;
+        @include fatex-rank-indicator();
         z-index: 100;
-        transform: translate(-25px, 0px);
-        font-weight: 900;
-        color: $sheet-background;
-        -webkit-text-stroke: 2px $fatex-primary-color;
-        text-shadow: initial;
         white-space: nowrap;
 
         &--skill {
@@ -61,10 +54,6 @@
             right: 100%;
             font-size: 24px;
             transform: translate(15px, -7px);
-        }
-
-        &--negative {
-            color: $caution-color;
         }
     }
 
