--- a/src/styles/legacy/chat.scss
+++ b/src/styles/legacy/chat.scss
@@ -27,19 +27,7 @@
 }
 
 .fatex__chat__headline__icon {
-    position: absolute;
-    top: 0;
-    left: 100%;
-    transform: translate(-25px, 0px);
-    font-weight: 900;
-    font-size: 24px;
-    color: $sheet-background;
-    -webkit-text-stroke: 2px $fatex-primary-color;
-    text-shadow: initial;
-}
-
-.fatex__chat__headline__icon--negative {
-    color: $caution-color;
+    @include fatex-rank-indicator(24px);
 }
 
 .fatex__chat__dice {
