fix(chat_skill_roll): remove fill stroke workaround for transparency issue and fix this issue by using text shadow in place of text stroke

--- a/src/styles/abstract/mixins.scss
+++ b/src/styles/abstract/mixins.scss
@@ -39,8 +39,15 @@
     font-weight: 900;
     font-size: $font-size;
     color: $sheet-background;
-    -webkit-text-stroke: 2px $fatex-primary-color;
-    text-shadow: initial;
+    text-shadow: 
+        -2px -2px 0 $fatex-primary-color,
+        2px -2px 0 $fatex-primary-color,
+        -2px 2px 0 $fatex-primary-color,
+        2px 2px 0 $fatex-primary-color,
+        -2px 0 0 $fatex-primary-color,
+        2px 0 0 $fatex-primary-color,
+        0 -2px 0 $fatex-primary-color,
+        0 2px 0 $fatex-primary-color;
     
     &--negative {
         color: $caution-color;
